# Personality-classification

./: .gitignore  .pre-commit-config.yaml  DASH_IMPLEMENTATION_COMPLETE.md  MODULAR_SUCCESS.md  Makefile  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  pre-commit-output.txt  pyproject.toml  pytest.ini  validate_submission_fix.py
.github/: AUTHORS.md  CONTRIBUTORS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: test.yml
dash_app/: .dockerignore  Dockerfile  docker-compose.yml  main.py
dash_app/dashboard/: app.py  callbacks.py  layout.py  model_loader.py
dash_app/src/: __init__.py  app.py  callbacks.py  layout.py  model_loader.py
dash_app/src/assets/: enhanced_styles.css
docs/: README.md  api-reference.md  architecture.md  configuration.md  data-augmentation.md  deployment.md  enhanced_layout_example.py  implementation-complete.md  implementation-guide.md  mlops-infrastructure.md  mlops-integration-summary.md  performance-tuning.md  pre-commit-guide.md  technical-guide.md  ui-ux-improvements.md
examples/: main_demo.py  main_final.py  minimal_test.py  mlops_demo.py  test_modules.py
models/: ensemble_metadata.json  stack_A_metadata.json  stack_B_metadata.json  stack_C_metadata.json  stack_D_metadata.json  stack_E_metadata.json  stack_F_metadata.json
scripts/: train_and_save_models.py
src/: __init__.py  main_modular.py  main_simple_test.py  minimal_test.py  six_stack_personality_classifier.py  test_modules.py
src/modules/: README.md  __init__.py  config.py  data_augmentation.py  data_loader.py  ensemble.py  model_builders.py  optimization.py  preprocessing.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_simple.py
tests/dash_app/: __init__.py  test_callbacks.py  test_dash_app.py  test_dash_application.py  test_dashboard_functional.py  test_integration.py  test_layout_components.py  test_model_loader.py
tests/modules/: __init__.py  test_model_builders.py
